# lotte

./: .gitignore  Dockerfile  README.md  lotte.py  pyproject.toml
chart/forest-lotte/forest-lotte/: Chart.yaml  values.yaml
chart/forest-lotte/forest-lotte/templates/: NOTES.txt  _helpers.tpl  lotte-configmap.yaml  lotte-deployment.yaml  lotte-secret.yaml
